--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "date-fns": "^4.1.0",
     "react": "^19.2.1",
     "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "@supabase/supabase-js": "^2.87.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
